--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <!-- Font Link -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="/assets/images/Logo.png" />
   <title>Peer Ride</title>
 </head>
 
